--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
+<!DOCTYPE html>
 <html>
-       <head>
-              <title> My title </title>
-       </head>
-       <body>
-               My first Page
-       </body>
+<head>
+	<title>Task-2</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<h1>This is heading 1</h1>
+	<div id="budgetsummary">
+		<p>This is the budget summary for ABC, Inc. In the year 2005, we had an income of <span class="income">$74,935</span>.We had expenses of <span class="expenses">$41,167</span>.This allow us to have a profit of <span class="profit">$33,768</span>.</p>
+		<p>In 2000, we had an income of <span class="income">$50,123</span>and expanses of <span class="expenses">$30,796</span>.This allowed to have a profit of <span class="profit">$19,327</span>.</p>
+		<p>In 1995, we had an income of <span class="income">&35,182</span> and expenses of <span class="expenses">$29,772</span>, for a total profit of <span class="profit">$5,410</span>.</p>
+		<p>In 1990 we had an income of <span class="income">$20,031</span> and expenses of <span class="expenses">$19,271</span>, for a total profit of <span class="profit">$760</span>.</p>
+		<p>As you can see, we are constantly growing. As we move further into the 21st century, at ABC, Inc. we think the future is bright!</p>
+	</div>
+</body>
 </html>
